<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_list_menu"
        android:title="@string/title_list" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user_menu"
        android:title="@string/title_profile" />

</menu>
