<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addItemConfirm"
        android:icon="@drawable/ic_confirm"
        android:title="@string/new_item_label"
        app:showAsAction="always" />

    <item
        android:id="@+id/eraseItem"
        android:icon="@drawable/ic_delet"
        android:title="@string/new_item_label"
        app:showAsAction="ifRoom" />

</menu>