...
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/addCategoryButton"
        app:layout_constraintStart_toEndOf="@id/addCategoryButton"
        app:layout_constraintTop_toTopOf="@id/addCategoryButton" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/categoryList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="74dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
...
